grammar.js
  word: $ => $._word,

  rules: {
    program: $ => optional($._statements),

    _statements: $ => prec(1, seq(
      repeat($._terminator), // Allow leading terminators/newlines
      repeat(seq(
        $._statement_or_comment,
        optional($.comment),
        $._terminator,
      )),
      $._statement_or_comment,
      optional($.comment),
      optional($._terminator),
    )),

    // Zsh glob qualifiers: (.) (/) (*) etc.
    // FIXME: these qualifiers need extending to deal with
    //
    _terminated_statement: $ => repeat1(seq(
      $._statement,
      $._terminator,
    )),
    
    _statement: $ => choice(
      $._statement_not_subshell,
      $.subshell,
    ),

    redirected_statement: $ => prec.dynamic(-1, prec.right(-1, choice(
      seq(
        field('body', $._statement),
        field('redirect', choice(
          repeat1(choice(
            $.file_redirect,
            $.heredoc_redirect,
            $.herestring_redirect,  // moved here from standalone
          )),
        )),
      ),
      seq(
        field('body', choice($.if_statement, $.while_statement)),
        $.herestring_redirect,
      ),
      field('redirect', repeat1($._redirect)),
    ))),

    for_statement: $ => seq(
      'for',
      field('variable', $._simple_variable_name),
      optional(seq(
        'in',
        field('value', repeat1($._literal)),
      )),
      $._terminator,
      field('body', $.do_group),
    ),
    
    do_group: $ => seq(
      'do',
      optional($._terminated_statement),
      'done',
    ),

    if_statement: $ => seq(
      'if',
      field('condition', $._terminated_statement),
      'then',
      optional($._terminated_statement),
      repeat($.elif_clause),
      optional($.else_clause),
      'fi',
    ),

    list: $ => prec.left(-1, seq(
      $._statement,
      choice('&&', '||'),
      $._statement,
    )),

    // Commands

    test_command: $ => prec(2, seq(
      choice(
        seq(
          '[', 
          optional(choice($._expression, $.redirected_statement)), 
          ']'
        ),
        seq(
          '[[',
          choice(
            prec(1, alias($._test_command_binary_expression, $.binary_expression)),
            $._expression,
          ),
          ']]',
        ),
        seq(
          '((', 
          optional($._expression), 
          '))'
        ),
      )),
    ),
    
    _test_command_binary_expression: $ => prec(PREC.COMPARE,
      choice(
        // Regex matching operator
        prec(PREC.COMPARE, seq(
          field('left', $._expression),
          field('operator', '=~'),
          field('right', $._regex_match_expression), // Use dedicated regex expression
        )),
        // Pattern/string matching operators  
        prec(PREC.COMPARE - 1, seq(
          field('left', $._expression),
          field('operator', choice('=', '==', '!=', $.test_operator)),
          field('right', $._expression),
        )),
      ),
    ),

    declaration_command: $ => prec.left(seq(
      choice('declare', 'typeset', 'export', 'readonly', 'local', 'integer', 'float'),
      repeat(
        choice(
          $.variable_assignment,
          field('argument', $._literal),
          field('redirect', $._redirect),
        )
      ),
    )),

    command: $ => prec.left(seq(
      prec(4, repeat(choice(
        $.variable_assignment,
        field('redirect', $._redirect),
      ))),
      field('name', $.command_name),
      choice(
        prec(4, repeat(
          choice(
            field('argument', $._literal),
//            prec(-1, field('argument', $._bare_dollar)),
            field('argument', $.glob_pattern),
            field('argument', seq(
              choice('=~', '=='),
              choice($._literal, $.regex),
            ),
            field('redirect', $.herestring_redirect),
          )
        ))),
        $.subshell,
      ),
    )),

    command_name: $ => $._literal,

    variable_assignment: $ => seq(
      field('name', choice(
        $.variable_name,
        $.subscript,
      )),
      choice(
        '=',
        '+=',
      ),
      field('value', choice(
        $._literal,
        $.array,
        $._empty_value,
        alias($._comment_word, $.word),
      )),
    ),

    subscript: $ => prec.left(seq(
      field('name', $.variable_name),
      '[',
      optional(field('flags', $.zsh_array_subscript_flags)),
      field('index', choice($._param_arithmetic_expression, $.array_star, $.array_at, $.string)),
      ']',
    )),

    // Arithmetic expressions for parameter subscripts (avoids subscript recursion)
    _param_arithmetic_expression: $ => prec(1, choice(
      $._param_arithmetic_literal,
      alias($._param_arithmetic_unary_expression, $.unary_expression),
      alias($._param_arithmetic_ternary_expression, $.ternary_expression),
      alias($._param_arithmetic_binary_expression, $.binary_expression),
      alias($._param_arithmetic_postfix_expression, $.postfix_expression),
      alias($._param_arithmetic_parenthesized_expression, $.parenthesized_expression),
      $.command_substitution,
    )),

    array_at: $ => $._array_at_token,

    // Zsh array subscript flags: (i) (I) (r) (R) etc.
    // FIXME: delimeter is forced as :, could be any
    file_redirect: $ => prec.left(seq(
      field('descriptor', optional($.file_descriptor)),
      choice(
        seq(
          choice('<', '>', '>>', '&>', '&>>', '<&', '>&', '>|'),
          field('destination', repeat1($._literal)),
        ),
        seq(
          choice('<&-', '>&-'), // close file descriptor
          optional(field('destination', $._literal)),
        ),
      ),
    )),

    herestring_redirect: $ => prec.left(1, seq(
      optional(field('descriptor', $.file_descriptor)),
      '<<<',
      $._literal,
    )),

    _redirect: $ => choice($.file_redirect, $.herestring_redirect),

    // Expressions

    _expression: $ => choice(
      $._literal,
      $.unary_expression,
      $.ternary_expression,
      $.binary_expression,
      $.postfix_expression,
      $.parenthesized_expression,
    ),

    // https://tldp.org/LDP/abs/html/opprecedence.html
    binary_expression: $ => createBinaryExpression(
      [...OPERATOR_TABLES.FULL, [$.test_operator, PREC.TEST]], // Add test_operator to full table
      $._expression,
      $._expression,
      {
        specialCases: [
          // Regex matching with new regex expression type
          prec(PREC.ASSIGN, seq(
            field('left', $._expression),
            field('operator', '=~'),
            field('right', $._regex_match_expression), // NEW: dedicated regex expression
          )),
          // Glob pattern matching (unchanged)
          prec(PREC.EQUALITY, seq(
            field('left', $._expression),
            field('operator', choice('==', '!=')),
            field('right', $._extglob_blob),
          )),
        ]
      }
    ),

    unary_expression: $ => choice(
      prec(PREC.PREFIX, seq(
        field('operator', tokenLiterals(1, '++', '--')),
        $._expression,
      )),
      prec(PREC.UNARY, seq(
        field('operator', tokenLiterals(1, '-', '+', '~')),
        $._expression,
      )),
      prec.right(PREC.UNARY, seq(
        field('operator', '!'),
        $._expression,
      )),
      prec.right(PREC.TEST, seq(
        field('operator', $.test_operator),
        $._expression,
      )),
    ),

    _regex_match_expression: $ => choice(
      $._regex_match_literal,
      alias($._regex_match_concatenation, $.concatenation),
    ),

    // Regex literals - let scanner handle regex patterns, grammar handles expansions
    _literal: $ => choice(
      $._primary_expression,
      $.concatenation,
      alias(prec(-2, repeat1($._special_character)), $.word),
    ),

    _primary_expression: $ => choice(
      $.qualified_expression,    // qualified globs should be first
      $._expansion_or_variable,
      $.glob_pattern,
      $._word_or_word_with_colon,
      alias($.test_operator, $.word),
      $.string,
      $.raw_string,
      $.translated_string,
      $.ansi_c_string,
      $.number,
      $.command_substitution,
      $.process_substitution,
      $.arithmetic_expansion,
      $.brace_expression,
    ),
    
    _limited_primary_expression: $ => choice(
      $.expansion,      // Try ${...} patterns first
      $.variable_ref,   // Fall back to $var patterns
      $.string,
      $.raw_string,
      $.translated_string,
      $.ansi_c_string,
      $.number,
      $.command_substitution,
      $.process_substitution,
      $.arithmetic_expansion,
    ),
    
    // Unified rule for all dollar-based patterns to eliminate competition  
    arithmetic_expansion: $ => prec(4, choice(
      seq(
        choice(
          alias(seq($._bare_dollar, '(('), "$(("),
          '(('
        ),
        commaSep1($._arithmetic_expression),
        '))'
      ),
      seq(
        alias(seq($._bare_dollar, '['), "$["),
        $._arithmetic_expression,
        ']'),
      )
    ),

    _arithmetic_expression: $ => prec(1, choice(
      $._arithmetic_literal,
      alias($._arithmetic_unary_expression, $.unary_expression),
      alias($._arithmetic_ternary_expression, $.ternary_expression),
      alias($._arithmetic_binary_expression, $.binary_expression),
      alias($._arithmetic_postfix_expression, $.postfix_expression),
      alias($._arithmetic_parenthesized_expression, $.parenthesized_expression),
      $.command_substitution,
    )),

    concatenation: $ => prec(-1, 
      seq(
      choice(
        $._primary_expression,
        alias($._special_character, $.word),
      ),
      repeat1(seq(
        choice($._concat, alias(/`\s*`/, '``')),
        choice(
          $._primary_expression,
          alias($._special_character, $.word),
          alias($._comment_word, $.word),
          // Use PEEK to check for $ without consuming it for concatenation
          $._peek_bare_dollar,
        ),
      )),
      // Use PEEK for trailing $ in concatenation
      optional(seq($._concat, $._peek_bare_dollar)),
    )),

    _special_character: _ => token(prec(-1,
      choice(token.immediate('{'), 
             token.immediate('}'), 
             token.immediate('['),
             token.immediate(']'),
             token.immediate(':')))),

    string: $ => seq(
      '"',
      repeat(seq(
        choice(
          seq(optional($._bare_dollar), $.string_content),
          $.expansion,
          $.variable_ref,
          $.command_substitution,
          $.arithmetic_expansion,
        ),
        optional($._concat),
      )),
      optional($._raw_dollar),
      '"',
    ),

    string_content: _ => token(prec(-1, /([^"`$\\\r\n]|\\(.|\r?\n))+/)),

    array: $ => seq(
      '(',
      repeat($._literal),
      ')',
    ),

    ansi_c_string: $ => prec(0,
      seq(
        alias($._bare_dollar, "$"), '\'', /([^']|\\')*/, '\''
      )
    ),

    number: $ => choice(
      /-?(0x)?[0-9]+(#[0-9A-Za-z@_]+)?/,
      // the base can be an expansion or command substitution
      seq(/-?(0x)?[0-9]+#/, choice($.expansion, $.command_substitution)),
    ),

    // Note: this is different than variable_name
    // in part it allows subscript, 
    // but more importably, variable_name is used with
    // assignment like semantics
    variable_ref: $ => prec.right(1, seq(
      alias($._bare_dollar, "$"),
      $._variable_ref,
    )),

    _variable_ref: $ => prec.right(40, seq(
      choice(
        seq(
            optional($.expansion_style),
            $._special_variable_name,
        ),
        seq(
            optional($.expansion_style),
            $._simple_variable_name,
        ),
      ),
      optional(seq(
        '[',
        optional(field('flags', $.zsh_array_subscript_flags)),
        field('index', choice($._param_arithmetic_expression, $.array_star, $.array_at)),
        ']'
      )),
      optional(field('modifier', $.expansion_modifier))
    )),

    _expansion_variable_ref: $ => seq(
      choice(
        $._simple_variable_name,
        $._special_variable_name,
        $._raw_command_expansion,
      ),
      optional(seq(  // Postfix subscript operator (left-associating)
        '[',
        optional(field('flags', $.zsh_array_subscript_flags)),
        field('index', choice($._param_arithmetic_expression, $.array_star, $.array_at)),
        ']'
      ))
    ),

    expansion_substring: $ => $._expansion_max_length,
    
    _expansion_default_value: $ => choice(
      $._literal,
      $._empty_value
    ),

    // Visible rule for parameter expansion defaults
    expansion_default: $ => prec(5, seq(
      optional(field('name', choice($._expansion_variable_ref, $._limited_primary_expression))),
      choice(
        seq(token.immediate('-'), field('default', $._expansion_default_value)),
        seq(token.immediate(':'), token.immediate('-'), field('default', $._expansion_default_value)),
        seq(token.immediate('+'), field('default', $._expansion_default_value)),
        seq(token.immediate(':'), token.immediate('+'), field('default', $._expansion_default_value)),
        seq(token.immediate('='), field('default', $._expansion_default_value)),
        seq(token.immediate(':'), token.immediate('='), field('default', $._expansion_default_value)),
        seq(token.immediate('='), field('default', $._expansion_default_value)),
        seq(token.immediate(':'), token.immediate(':'), token.immediate('='), field('default', $._expansion_default_value)),
        seq(token.immediate('?'), field('default', $._expansion_default_value)),
        seq(token.immediate(':'), token.immediate('?'), field('default', $._expansion_default_value)),
      )
    )),

    // Visible rule for parameter expansion patterns 
    expansion_pattern: $ => seq(
      field('name', choice($._expansion_variable_ref, $._limited_primary_expression)),
      choice(
        seq($._hash_pattern, $._pattern_suffix_start, field('pattern', $._param_pattern)),
        seq($._double_hash_pattern, $._pattern_suffix_start, field('pattern', $._param_pattern)),
        seq(token.immediate('%'), $._pattern_suffix_start, field('pattern', $._param_pattern)),
        seq(token.immediate('%%'), $._pattern_suffix_start, field('pattern', $._param_pattern)),
        seq(token.immediate(':'), $._hash_pattern, $._pattern_suffix_start, field('pattern', $._param_pattern)),
        seq(token.immediate(':'), $._double_hash_pattern, $._pattern_suffix_start, field('pattern', $._param_pattern)),
        seq(token.immediate(':'), token.immediate('%'), $._pattern_suffix_start, field('pattern', $._param_pattern)),
        seq(token.immediate(':'), token.immediate('%%'), $._pattern_suffix_start, field('pattern', $._param_pattern)),
        seq(token.immediate('//'), 
            $._pattern_start, 
            field('pattern', $._param_pattern_no_slash),
            optional(
              seq(
                token.immediate('/'),
                optional(field('replacement', $._param_replacement))
              )
            )
        ),
        seq(token.immediate('/'), 
            $._pattern_start, 
            field('pattern', $._param_pattern_no_slash),
            optional(
              seq(
                token.immediate('/'),
                optional(field('replacement', $._param_replacement)),
              )
            ),
        ),
        seq(token.immediate(':'), token.immediate('/'), 
            $._pattern_start,
            field('pattern', $._param_pattern_no_slash),
            optional(
              seq(
                token.immediate('/'),
                optional(field('replacement', $._param_replacement)),
              )
            ),
        )
      )
    ),

    // Visible rule for parameter expansion arrays
    expansion_with_modifier: $ => seq(
      optional(field('name', choice($._expansion_variable_ref, $._limited_primary_expression))),
      field('modifier', $.expansion_modifier)
    ),

    comment: $ => token(prec(-20, /#[^\r\n]*/)),
